# SyncBridge

./: .coverage  .env.template  .gitignore  Api and database.txt  CHANGELOG-state-machine.md  CODE_AND_DOCUMENTATION_ALIGNMENT.md  DOCUMENTATION_INDEX.md  README.md  RELEASE_NOTE.md  RELEASE_NOTES.md  SRSExample-webapp.txt  System Design Document .txt  audit-plan.md  ci.yml  crud.py  database.py  models.py  permissions.py  potential_problem.txt  pyproject.toml  schemas.py  spec-alignment-apis.md  spec-alignment-old.md  spec-alignment.md  spec-legacy-gaps.md  utils.py  websocket_manager.py  状态机与协商问题.txt  规范对齐情况.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 11b5f174d692_add_block_reminder_fields.py  20251221_add_approval_flags.py  29fd5bdc6b01_merge_heads.py  9f2bc9e6c1d7_add_block_reminder_fields.py  ab4d1b5c2bd7_.py  auto_add_approval_flags_to_forms.py  edbe879cab13_add_blocks_reminder_scan_index.py
app/: main.py
app/models/: __init__.py  audit_log.py  (+9 more)
suncbridge-demo/: client.html  developer.html  index.html  login.html  srs.html
syncbridge-backend/: .env.template  API_AND_DATABASE_ALIGNMENT.md  API_TEST_GUIDE.md  LEGACY_TO_CURRENT_MIGRATION.md  README.md  alembic.ini  pyproject.toml
syncbridge-demo/: client.html  developer.html  rbd.html  register.html  tbd.html
syncbridge-frontend/: .gitignore  RELEASE_NOTE.md  package-lock.json  package.json  vite.config.js
tests/: __init__.py  conftest.py  test_auth.py  test_files.py  test_forms.py  test_functions.py  test_messages.py  test_nonfunctions.py  test_reminders_and_audit.py  test_ws.py
(+106 files in other folders)
